Prevent squished radio buttons

--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -24,6 +24,7 @@
 
 	cursor: pointer;
 	margin-right: 12px;
+	flex-shrink: 0;
 	width: 16px;
 	height: 16px;
 	border-radius: 50%;
